# churn_prediction

./: .gitignore  README.md
app/: .env.example  Dockerfile  README.md  app.py  churn_prototype.postman_collection.json  config.py  pyproject.toml  requirements.txt
app/models/: model_churn.joblib  psi_train_reference.csv
app/module/: base_func.py  bq_connection.py  churn_prediction.py  churn_prediction_pipeline.py  getting_churn_score.py  pipeline_config.py  task_manager.py  utils.py
app/scripts/: bq_check_customer_id.sql  bq_churn_pred_eval_prf.sql  bq_get_churn_pred_by_customer_id.sql  bq_read_rows.sql  bq_temp_churn_pred_feature.sql
app/test/: churn_prediction_pipeline.py
training/: .env.example  EDA.ipynb  Modeling.ipynb  Monitor_PSI.ipynb  Readme.md  config.py  requirements.txt
training/module/: utils.py  viz_utils.py
